Try to fix freezed draggable item on mobile phone

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   position: relative;
   min-width: 320px;
   margin: 0;
-  padding: 30px;
+  padding: 20px;
   background-color: #fff;
   user-select: none;
 }
@@ -31,13 +31,13 @@ body {
 
 .container {
   display: flex;
-  margin-top: 30px;
-  column-gap: 30px;
+  margin-top: 20px;
+  column-gap: 20px;
 }
 
 .drop-area {
   box-sizing: border-box;
-  width: calc(50% - 15px);
+  width: calc(50% - 10px);
   overflow: auto;
   border: 1px dashed #000;
   aspect-ratio: 1 / 1;
@@ -51,8 +51,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
-  padding: 10px;
-  gap: 10px;
+  padding: 5px;
+  gap: 5px;
 }
 
 .drop-area_canvas {
